--- a/menu.css
+++ b/menu.css
@@ -12,7 +12,14 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
 }
+.inactive {
+    display: none;
+}
 .desktop-menu {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background: var(--white);
     width: 100px;
     height: auto;
     border: 1px solid var(--very-light-pink);
